--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.10.0",
+    "axios": "^1.6.8",
+    "elevenlabs-node": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
