--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-GEMINI_API_KEY = "AIzaSyA7sNNnlwg5lWUs1CJv4jlqsz3QEOgyrLA"
+GEMINI_API_KEY = "AIzaSyA7sNNnlwg5lWUs1CJv4jlqsz3QEOgyrLA",
+TEXT_API = "938f0f4c2a487ef242729d3dec491c23"
